--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -10,7 +10,26 @@
 	<title>Argentum</title>
 </h:head>
 <h:body>
-	<p:chart type="line" model="#{argentumBean.modeloGrafico}" />
+
+	<h:form>
+		<h:panelGrid columns="5">
+			<h:outputText value="Tipo Media" />
+			<p:selectOneButton value="#{argentumBean.mediaMovel}">
+				<f:selectItem itemLabel="Media Movel Simples" itemValue="MediaMovelSimples" />
+				<f:selectItem itemLabel="Media Movel Ponderada" itemValue="MediaMovelPonderada" />
+				<f:selectItem itemLabel="Nenhum" itemValue="" />
+			</p:selectOneButton>
+			<p:selectOneButton value="#{argentumBean.indicador}">
+				<f:selectItem itemLabel="Abertura" itemValue="Abertura" />
+				<f:selectItem itemLabel="Fechamento" itemValue="Fechamento" />
+			</p:selectOneButton>
+
+			<p:commandButton value="Mudar Grafico" action="#{argentumBean.geraGrafico()}" update=":grafico"  />
+		</h:panelGrid>
+	</h:form>
+
+
+	<p:chart id="grafico" type="line" model="#{argentumBean.modeloGrafico}" />
 
 	<h:form>
 		<p:dataTable var="negociacao" value="#{argentumBean.negociacoes}"
